# netimps

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: index.md
docs/api/: reference.md
src/netimps/: AGENTS.md  __init__.py  __main__.py  _dns.py  _iface_spec.py  _ifaddrs.py  _ip.py  _mac.py  _multicast.py  _ping.py  _retry.py  _scan.py  _scheme.py  _sockets.py  _udp.py  cli.py
src/netutils/: AGENTS.md  __init__.py
tests/: test_centralized.py  test_cli.py  test_interfaces.py  test_ip.py  test_mac.py  test_net.py  test_scan.py  test_sockets.py
