[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netimps"
version = "0.3.0"
authors = [{ name = "Jose A." }]
description = "Small, self-contained network utilities: IP/MAC types, DNS lookup, ping, NIC discovery"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = ["dnspython"]

[project.optional-dependencies]
dev = ['build', 'twine', 'hatchling', 'pytest', 'black']
docs = ['mkdocs', 'mkdocs-material', 'mkdocstrings[python]']

[project.urls]
Homepage = "https://github.com/jose-pr/netimps"
Documentation = "https://jose-pr.github.io/netimps/"
Issues = "https://github.com/jose-pr/netimps/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

[tool.black]
# 3.9 is the floor, so don't let black emit syntax newer than that.
target-version = ["py39"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
