[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netimps"
version = "0.0.2"
authors = [{ name = "Jose A." }]
description = "Small, self-contained network utilities: IP/MAC types, DNS lookup, ping, NIC discovery"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = ["dnspython"]

[project.optional-dependencies]
# The CLI is optional: importing netimps must never require duho.
cli = ['duho>=0.3.3']
dev = ['build', 'twine', 'hatchling', 'pytest', 'black', 'duho>=0.3.3']
docs = ['mkdocs', 'mkdocs-material', 'mkdocstrings[python]']

[project.scripts]
netimps = "netimps.cli:run"

[project.urls]
Homepage = "https://github.com/jose-pr/netimps"
Documentation = "https://jose-pr.github.io/netimps/"
Issues = "https://github.com/jose-pr/netimps/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

# Ship the *consumer-facing* docs inside the installed package, so a consuming
# agent can read them from site-packages via importlib.resources rather than
# needing the repo.
#
# src/netimps/AGENTS.md is included automatically by living in the package dir.
# The repo-root AGENTS.md is deliberately NOT shipped: it is development
# documentation (venvs, CI, release process) and is useless to someone who has
# only installed the library.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "netimps/README.md"

[tool.black]
# 3.9 is the floor, so don't let black emit syntax newer than that.
target-version = ["py39"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
